--- a/add.html
+++ b/add.html
@@ -45,6 +45,7 @@
 <script
     src="https://code.jquery.com/jquery-3.3.1.js"
     integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-    crossorigin="anonymous"></script><script src="scripts/add.js"></script>
+    crossorigin="anonymous"></script>
+<script src="scripts/add.js"></script>
 </body>
 </html>
