User can add new cards

--- a/add.html
+++ b/add.html
@@ -23,12 +23,10 @@
   <div class="cards">
     <div class="input">
       <template id="add-card-input">
-        <p id="card-__index__">
+        <p class="card" id="card-__index__">
           <input class="question">
           <input class="answer">
-          <select class="category">
-
-          </select>
+          <select class="category"></select>
         </p>
       </template>
     </div>
