--- a/flashcard2.html
+++ b/flashcard2.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles/flashcards.css">
   </head>
   <body>
+    <span class="type" id='werwerwer'></span>
     <header>
       <span class="empty"></span>
       <h1>Title</h1>
@@ -23,6 +24,10 @@
       <span class="empty"></span>
       <button type="button" onclick="newCard();" id="next-card">jgvnhgchgchgchggchkg</button>
     </footer>
+    <script
+    src="https://code.jquery.com/jquery-3.3.1.js"
+    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous"></script>
     <script type="text/javascript" src="scripts/flashcards.js"></script>
   </body>
 </html>
