--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
       <h2>Categories</h2>
       <div class="container">
         <div class="column">
-          <div class="category" id="category-1">
+          <div class="category" id="periodic" onclick="window.location.replace('flashcard0.html');">
             <h3 class="category-name">Practice Category 1</h3>
           </div>
-          <div class="category" id="category-3">
+          <div class="category" id="werwerwer">
             <h3 class="category-name">Practice Category 3</h3>
           </div>
         </div>
         <div class="column">
-          <div class="category" id="category-2">
+          <div class="category" id="dutch">
             <h3 class="category-name">Practice Category 2</h3>
           </div>
           <div class="category" id="category-4">
@@ -36,5 +36,6 @@
         </div>
       </div>
     </main>
+    <script type="text/javascript" src="scripts/index.js"></script>
   </body>
 </html>
