--- a/flashcard1.html
+++ b/flashcard1.html
@@ -9,7 +9,7 @@
     <span class="type" id='LearnDutch'></span>
     <header>
       <span class="empty"></span>
-      <h1>Title</h1>
+      <h1 onclick="window.location.replace('index.html');">Title</h1>
       <span class="empty"></span>
       <nav>
         <span class="nav-items"><a href="#">Add Cards</a></span>
