--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <span class="empty"></span>
-      <h1>Title</h1>
+      <h1 onclick="window.location.replace('index.html');">Title</h1>
       <span class="empty"></span>
       <nav>
         <span class="nav-items"><a href="#">Add Cards</a></span>
@@ -22,12 +22,12 @@
           <div class="category" id="periodic" onclick="window.location.replace('flashcard0.html');">
             <h3 class="category-name">Practice Category 1</h3>
           </div>
-          <div class="category" id="werwerwer">
+          <div class="category" id="werwerwer" onclick="window.location.replace('flashcard2.html');">
             <h3 class="category-name">Practice Category 3</h3>
           </div>
         </div>
         <div class="column">
-          <div class="category" id="dutch">
+          <div class="category" id="dutch" onclick="window.location.replace('flashcard1.html');">
             <h3 class="category-name">Practice Category 2</h3>
           </div>
           <div class="category" id="category-4">
