--- a/flashcard1.html
+++ b/flashcard1.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Flashcards</title>
     <link rel="stylesheet" href="styles/flashcards.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700i" rel="stylesheet">
   </head>
   <body>
     <span class="type" id='LearnDutch'></span>
@@ -12,7 +13,7 @@
       <h1 onclick="window.location.replace('index.html');">Title</h1>
       <span class="empty"></span>
       <nav>
-        <span class="nav-items"><a href="#">Add Cards</a></span>
+        <span class="nav-items"><a href="add.html">Add Cards</a></span>
         <span class="nav-items"><a href="#">Delete Cards</a></span>
       </nav>
     </header>
@@ -22,7 +23,7 @@
     </main>
     <footer>
       <span class="empty"></span>
-      <button type="button" onclick="newCard();" id="next-card">jgvnhgchgchgchggchkg</button>
+      <button type="button" onclick="newCard();" id="next-card">Next Card</button>
     </footer>
     <script
     src="https://code.jquery.com/jquery-3.3.1.js"
