--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Flashcards</title>
     <link rel="stylesheet" href="styles/index.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700i" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -11,7 +12,7 @@
       <h1 onclick="window.location.replace('index.html');">Title</h1>
       <span class="empty"></span>
       <nav>
-        <span class="nav-items"><a href="#">Add Cards</a></span>
+        <span class="nav-items"><a href="add.html">Add Cards</a></span>
         <span class="nav-items"><a href="#">Delete Cards</a></span>
       </nav>
     </header>
@@ -20,15 +21,15 @@
       <div class="container">
         <div class="column">
           <div class="category" id="periodic" onclick="window.location.replace('flashcard0.html');">
-            <h3 class="category-name">Practice Category 1</h3>
+            <h3 class="category-name">Periodic Table</h3>
           </div>
           <div class="category" id="werwerwer" onclick="window.location.replace('flashcard2.html');">
-            <h3 class="category-name">Practice Category 3</h3>
+            <h3 class="category-name">Werwerwer</h3>
           </div>
         </div>
         <div class="column">
           <div class="category" id="dutch" onclick="window.location.replace('flashcard1.html');">
-            <h3 class="category-name">Practice Category 2</h3>
+            <h3 class="category-name">Dutch Vocabulary</h3>
           </div>
           <div class="category" id="category-4">
             <h3 class="category-name">Practice Category 4</h3>
@@ -36,6 +37,5 @@
         </div>
       </div>
     </main>
-    <script type="text/javascript" src="scripts/index.js"></script>
   </body>
 </html>
