--- a/add.html
+++ b/add.html
@@ -4,13 +4,18 @@
   <meta charset="UTF-8">
   <title>Title</title>
   <link href="styles/add.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,700i" rel="stylesheet">
 </head>
 <body>
-
-
-<header>
-
-</header>
+  <header>
+    <span class="empty"></span>
+    <h1 onclick="window.location.replace('index.html');">Title</h1>
+    <span class="empty"></span>
+    <nav>
+      <span class="nav-items"><a href="add.html">Add Cards</a></span>
+      <span class="nav-items"><a href="#">Delete Cards</a></span>
+    </nav>
+  </header>
 <main>
   <div class="categories">
     <div class="input" style="display: none">
@@ -24,6 +29,30 @@
     <div class="input">
       <template id="add-card-input">
         <p class="card" id="card-__index__">
+          <span class="head-text">question</span>
+          <span class="head-text">answer</span>
+        </p>
+        <p class="card" id="card-__index__">
+          <input class="question">
+          <input class="answer">
+          <select class="category"></select>
+        </p>
+        <p class="card" id="card-__index__">
+          <input class="question">
+          <input class="answer">
+          <select class="category"></select>
+        </p>
+        <p class="card" id="card-__index__">
+          <input class="question">
+          <input class="answer">
+          <select class="category"></select>
+        </p>
+        <p class="card" id="card-__index__">
+          <input class="question">
+          <input class="answer">
+          <select class="category"></select>
+        </p>
+        <p class="card" id="card-__index__">
           <input class="question">
           <input class="answer">
           <select class="category"></select>
@@ -36,9 +65,6 @@
     </div>
   </div>
 </main>
-
-
-
 
 <script
     src="https://code.jquery.com/jquery-3.3.1.js"
