Added header in overview.html

--- a/add.html
+++ b/add.html
@@ -27,31 +27,11 @@
   </div>
   <div class="cards">
     <div class="input">
+      <p class="card">
+        <span class="head-text">question</span>
+        <span class="head-text">answer</span>
+      </p>
       <template id="add-card-input">
-        <p class="card" id="card-__index__">
-          <span class="head-text">question</span>
-          <span class="head-text">answer</span>
-        </p>
-        <p class="card" id="card-__index__">
-          <input class="question">
-          <input class="answer">
-          <select class="category"></select>
-        </p>
-        <p class="card" id="card-__index__">
-          <input class="question">
-          <input class="answer">
-          <select class="category"></select>
-        </p>
-        <p class="card" id="card-__index__">
-          <input class="question">
-          <input class="answer">
-          <select class="category"></select>
-        </p>
-        <p class="card" id="card-__index__">
-          <input class="question">
-          <input class="answer">
-          <select class="category"></select>
-        </p>
         <p class="card" id="card-__index__">
           <input class="question">
           <input class="answer">
