--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <span class="empty"></span>
       <nav>
         <span class="nav-items"><a href="add.html">Add Cards</a></span>
-        <span class="nav-items"><a href="#">Delete Cards</a></span>
+        <span class="nav-items"><a href="overview.html">Overview</a></span>
       </nav>
     </header>
     <main>
