--- a/overview.html
+++ b/overview.html
@@ -3,10 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <title>Overview</title>
+  <link rel="stylesheet" href="styles/index.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,700i" rel="stylesheet">
 </head>
 <body>
 <header>
-
+  <span class="empty"></span>
+  <h1 onclick="window.location.replace('index.html');">Title</h1>
+  <span class="empty"></span>
+  <nav>
+    <span class="nav-items"><a href="add.html">Add Cards</a></span>
+    <span class="nav-items"><a href="overview.html">Overview</a></span>
+  </nav>
 </header>
 <main></main>
 
