--- a/overview.html
+++ b/overview.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Overview</title>
   <link rel="stylesheet" href="styles/index.css">
+  <link rel="stylesheet" href="styles/overview.css">
+
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700i" rel="stylesheet">
 </head>
 <body>
