changed werwerwer to animals

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h3 class="category-name">Periodic Table</h3>
           </div>
           <div class="category" id="werwerwer" onclick="window.location.replace('flashcard2.html');">
-            <h3 class="category-name">Werwerwer</h3>
+            <h3 class="category-name">Animals</h3>
           </div>
         </div>
         <div class="column">
